# Canasta

./: README.md
docs/: DOCUMENTATION.md  Doxyfile  INSTALL.md  PLAY.md  README.md  REQUIREMENTS.md  specification.md
docs/diagrams/: client.puml  core.puml  server.puml
src/: CMakeLists.txt  conandata.yml  conanfile.py  count_lines.py
src/app/: card.cpp  client_deck.cpp  hand.cpp  meld.cpp  player.cpp  rule_engine.cpp  team.cpp  team_round_state.cpp
src/app/client/: canasta_console.cpp  client_controller.cpp  client_deck.cpp  client_main.cpp  client_network.cpp  game_view.cpp  input_guard.cpp
src/app/server/: game_manager.cpp  round_manager.cpp  rule_engine.cpp  server_deck.cpp  server_logging.cpp  server_main.cpp  server_network.cpp  turn_manager.cpp
src/include/: card.hpp  client_deck.hpp  game_state.hpp  hand.hpp  meld.hpp  network.hpp  player.hpp  player_public_info.hpp  rule_engine.hpp  score_details.hpp  team.hpp  team_round_state.hpp
src/include/client/: canasta_console.hpp  client_controller.hpp  client_network.hpp  game_view.hpp  input_guard.hpp
src/include/server/: game_manager.hpp  make_state.hpp  round_manager.hpp  rule_engine.hpp  server_deck.hpp  server_logging.hpp  server_network.hpp  turn_manager.hpp
